Modularize champion voting functionality with new `VoteDetails` component
Includes:
- Extracted voting logic to reusable `VoteDetails` component
- Replaced inlined voting code in `VotingComponent` with `VoteDetails`
- Refactored `DatadragonService` to include caching and image URL helpers
- Added `FirebaseService` to handle Firestore operations
- Introduced Firebase models for better type safety
- Removed unused test files and adjusted `gitignore` for Firebase configurations

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 npm-debug.log
 yarn-error.log
 
+# Firebase
+.firebaserc
+firebase.json
+firebase.rules
+firestore.indexes.json
+
 # IDEs and editors
 .idea/
 .project
